YYYY-MM-DD {
	* fix or change
	+ add
	- delete
}

2017-12-25 {
	+ added wsSetWindowHint function
	* republished repository on GitHub
	+ added "hint" sample
}

2017-12-13 {
	+ added a new sample
}

2017-12-12 {
	* reconfigurated makefile
	+ added static library compile option
	+ added wsFocusWindow
	+ added wsTerminate
}

2017-12-10 {
	* merged include files
	* WS_STYLE_NOBUFFERAUTORESIZE -> WS_STYLE_NO_BUFFER_RESIZE
	+ added WS_STYLE_NO_FRAMEBUFFER and WS_STYLE_NO_DEPTHBUFFER, which makes it
		easier to draw static window and 2D window
	+ added a root makefile
	* fixed a bug that when a window's ancestor is closed in his callback,
		the program will crash
}

2017-12-09 {
	* fixed a bug that when the window's size changed, the cursorMoveCallback
		rather than the windowMoveCallback will be called if windowMoveCallback
		is set
	* fixed the window focus algorithm, which will cause strange behavior when
		calling keyboard about callbacks
	+ added another example
}

2017-12-08 {
	* adjusted makefile struct
	* changed from bool to int, in order to satisfy language C
}

2017-12-07 {
	* wsGetPrecursorWindow -> wsGetPrevWindow,
	  wsGetSuccessorWindow -> wsGetNextWindow,
	  wsGetWindowUserData -> wsGetWindowData
	* moved code from VS to VS code
	* pushed onto GitHub
	+ added makefile
}

2017-09-26 {
	* adjusted align mode from wsSetWindowSize mode to wsWindowStyle
}

2017-09-25 {
	+ added some annotates
}

2017-09-24 {
	* reordered wsWindowInfo structure
	+ added wsGetPrecursorWindow and wsGetSuccessorWindow funcs
	- deleted wsGetGlobalPosition and wsGetWindowPosition funcs
		because these can be easily accomplished by user
}

2017-09-23 {
	+ added wsGetWindowInfo func
}

2017-09-22 {
	* adjusted display order so that current window's debug output won't
		be covered by it's subwindows
	+ added wsPostRedisplay func
	+ added wsSetSwapInterval func
	+ added wsSetFPS func
	+ added wsGetWindowCursorPos func
	+ added wsGetGlobalPosition func
	+ added wsGetWindowPosition func
}
